--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
   </head>
   <body>
     <main>
-      <sectio id="login">
-        <div id="imagem">
-
-        </div>
+      <section id="login">
+        <div id="imagem"></div>
         <div id="formulario">
           <h1>Login</h1>
-          Seja bem-vindo(a) novamente. Faça login para acessar sua conta e fazer as configurações necessárias.
-          <form action="login.php" method="post">
-
-          </form>
+          Seja bem-vindo(a) novamente. Faça login para acessar sua conta e fazer
+          as configurações necessárias.
+          <form action="login.php" method="post"></form>
         </div>
-
       </section>
     </main>
   </body>
