--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             </div>
             <input type="submit" value="Entrar" />
             <a href="esqueci.html">
-              Esqueci a senha<i class="material-icons">mail</i>
+              Esqueci a senha
+              <i class="material-icons">mail</i>
             </a>
           </form>
         </div>
