--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
     <main>
       <section id="login">
@@ -48,9 +47,9 @@
               <label for="isenha">Senha</label>
             </div>
             <input type="submit" value="Entrar" />
-            <a href="esqueci.html">
+            <a href="esqueci.html" class="botao">
               Esqueci a senha
-              <i class="material-icons">mail</i>
+              <i class="material-icons"></i>
             </a>
           </form>
         </div>
